# rust_webgl_demo

./: .gitignore  .sparkleshare  Cargo.toml  LICENSE.md  README.md  SparkleShare.txt  Web.toml  requirements.txt  setup.py
pub/: index.html
scripts/: __init__.py  build.py  hostserver.py
src/: Cargo.toml  audio.rs  graphics.rs  input.rs  main.rs  runtime.js  tools.rs
src/shaders/: cube_vs.glsl  flat_fs.glsl  flat_vs.glsl  frag_pvm.glsl
src/static/: index.html
