[package]
name = "rust-webassembly-hello-world"
version = "0.1.0"
authors = ["Christopher A. Taylor <mrcatid@gmail.com>"]

[dependencies]
stdweb = "0.4.12"           # A standard library for the client-side Web
nalgebra-glm = "0.2.1"         # A computer-graphics oriented API for nalgebra, inspired by the C++ GLM library.
sample = "0.10.0"                 # A crate providing the fundamentals for working with audio PCM DSP.
