[package]
name = "rust-webassembly-hello-world"
version = "0.1.0"
authors = ["Christopher A. Taylor <mrcatid@gmail.com>"]

[features]
default = []
jsexports = [] # Exports to JS from Rust

[dependencies]
stdweb = "0.4.14"
nalgebra-glm = "0.3.0"
sample = "0.10.0"
stdweb-derive = "0.5.1"
serde = "1.0.88"
serde_derive = "1.0.88"
specs = "0.14.3"

[build-dependencies]
webgl_generator = "0.2.0"
